--- a/Sunwise/View/History Detail/HistoryDetail.storyboard
+++ b/Sunwise/View/History Detail/HistoryDetail.storyboard
@@ -116,7 +116,7 @@
                                                         <color key="textColor" name="LB-mainText"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Psb-sH-hry">
+                                                    <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Psb-sH-hry">
                                                         <rect key="frame" x="0.0" y="433.66666666666674" width="373" height="300"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
@@ -124,14 +124,14 @@
                                                         </constraints>
                                                         <prototypes>
                                                             <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SessionDetailCell" id="t71-X0-ro0" customClass="SessionDetailTableViewCell" customModule="Sunwise" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="50" width="373" height="276.33334350585938"/>
+                                                                <rect key="frame" x="0.0" y="50" width="373" height="277"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="t71-X0-ro0" id="FqZ-A8-BDA">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="373" height="276.33334350585938"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="373" height="277"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WJl-VH-4ty">
-                                                                            <rect key="frame" x="10" y="10" width="353" height="256.33333333333331"/>
+                                                                            <rect key="frame" x="10" y="10" width="353" height="257"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Sunbathe Detail - Session 1:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vBC-dR-0bs">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="353" height="20.333333333333332"/>
@@ -271,7 +271,7 @@
                                                                                     </subviews>
                                                                                 </stackView>
                                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Om2-6b-SwV">
-                                                                                    <rect key="frame" x="0.0" y="182.33333333333334" width="353" height="74.000000000000028"/>
+                                                                                    <rect key="frame" x="0.0" y="182.33333333333334" width="353" height="74.666666666666657"/>
                                                                                 </view>
                                                                             </subviews>
                                                                         </stackView>
